# destroyer_2d

./: .gitignore  BUILD.md  CMakeLists.txt  Doxyfile  GAMING.md  README.md
doc/: presentation.pptx
doc/reference/html/: _8ycm__extra__conf_8py.html  annotated.html  classBlock-members.html  classBlock.html  classBlock__coll__graph.map  classBlock__coll__graph.md5  classBlock__inherit__graph.map  classBlock__inherit__graph.md5  classBomb-members.html  classBomb.html  classBomb__coll__graph.map  classBomb__coll__graph.md5  classBomb__inherit__graph.map  classBomb__inherit__graph.md5  classButton-members.html  classButton.html  classButton__coll__graph.map  classButton__coll__graph.md5  classButton__inherit__graph.map  classButton__inherit__graph.md5  classCancelCallback-members.html  classCancelCallback.html  classCancelCallback__coll__graph.map  classCancelCallback__coll__graph.md5  classCancelCallback__inherit__graph.map  classCancelCallback__inherit__graph.md5  classDeleteButtonCallback-members.html  classDeleteButtonCallback.html  classDeleteButtonCallback__coll__graph.map  classDeleteButtonCallback__coll__graph.md5  classDeleteButtonCallback__inherit__graph.map  classDeleteButtonCallback__inherit__graph.md5  classDeletingCallback-members.html  classDeletingCallback.html  classDeletingCallback__coll__graph.map  classDeletingCallback__coll__graph.md5  classDeletingCallback__inherit__graph.map  classDeletingCallback__inherit__graph.md5  classDraggingCallback-members.html  classDraggingCallback.html  (+386 more)
doc/reference/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  (+83 more)
doc/reference/latex/: _8ycm__extra__conf_8py.tex  annotated.tex  classBlock.tex  classBlock__coll__graph.md5  classBlock__inherit__graph.md5  classBomb.tex  classBomb__coll__graph.md5  classBomb__inherit__graph.md5  classButton.tex  classButton__coll__graph.md5  classButton__inherit__graph.md5  classCancelCallback.tex  classCancelCallback__coll__graph.md5  classCancelCallback__inherit__graph.md5  classDeleteButtonCallback.tex  classDeleteButtonCallback__coll__graph.md5  classDeleteButtonCallback__inherit__graph.md5  classDeletingCallback.tex  classDeletingCallback__coll__graph.md5  classDeletingCallback__inherit__graph.md5  classDraggingCallback.tex  classDraggingCallback_1_1LocalListener.tex  classDraggingCallback_1_1LocalListener__coll__graph.md5  classDraggingCallback__coll__graph.md5  classDraggingCallback__inherit__graph.md5  classDust.tex  classDust__coll__graph.md5  classDust__inherit__graph.md5  classEnemy.tex  classEnemy__coll__graph.md5  classEngine.tex  classEngine__coll__graph.md5  classEngine__inherit__graph.md5  classFlame.tex  classFlame__coll__graph.md5  classFlame__inherit__graph.md5  classFrame.tex  classFrame__coll__graph.md5  classFrame__inherit__graph.md5  classLargeEngine.tex  (+129 more)
doc/tex/: document.tex
res/levels/: README.md  cargo_ship.conf  cargo_ship.data  level0.txt  level1.txt  level2.txt  mines.conf  mines.data  missiles.data  warship.conf  warship.data
saved_game/: README.md  _sample.txt
src/: const.h  enemy.cpp  enemy.h  image.h  loader.cpp  loader.h  main.cpp  matter.cpp  matter.h  mousecallback.h  mousehandler.cpp  mousehandler.h  render.cpp  render.h  saver.cpp  saver.h  window.cpp  window.h  world.cpp  world.h
